[package]
name = "yaml-rust2"
version = "0.5.0"
authors = [
  "Yuheng Chen <yuhengchen@sensetime.com>",
  "Ethiraric <ethiraric@gmail.com>"
]
documentation = "https://docs.rs/yaml-rust2"
license = "MIT OR Apache-2.0"
description = "A fully YAML 1.2 compliant YAML parser"
repository = "https://github.com/Ethiraric/yaml-rust2"
readme = "README.md"
edition = "2018"

[dependencies]
arraydeque = "0.5.1"
linked-hash-map = "0.5.3"

[dev-dependencies]
libtest-mimic = "0.3.0"
quickcheck = "0.9"
rand = "0.8.5"
lipsum = "0.9.0"

[profile.release-lto]
inherits = "release"
lto = true

[[test]]
name = "yaml-test-suite"
harness = false
