[package]
name = "bench_compare"
version = "0.5.0"
authors = [
  "Ethiraric <ethiraric@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = "Run multiple YAML parsers and compare their times"
repository = "https://github.com/Ethiraric/yaml-rust2"
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = { version = "1.0.81", features = ["backtrace"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.32"
toml = "0.8.11"

[profile.release-lto]
inherits = "release"
lto = true
