[package]
name = "gen_large_yaml"
version = "0.5.0"
authors = [
  "Ethiraric <ethiraric@gmail.com>"
]
license = "MIT OR Apache-2.0"
description = "A helper to generate large YAML files"
repository = "https://github.com/Ethiraric/yaml-rust2"
readme = "README.md"
edition = "2018"

[dependencies]
yaml-rust2 = { version = "0.5.0", path = "../../" }
rand = "0.8.5"
lipsum = "0.9.0"

[profile.release-lto]
inherits = "release"
lto = true
